--- a/Shared/AzulLayout.razor
+++ b/Shared/AzulLayout.razor
@@ -8,7 +8,7 @@
     <nav class="azul-nav">
       <div class="azul-nav-inner">
         <div class="azul-left">
-          <a href="/azul" class="azul-logo-link">
+          <a href="/azul#home" class="azul-logo-link">
             <img src="/image/SistemaLegado.png" alt="logo" class="azul-logo" />
           </a>
         </div>
@@ -21,10 +21,10 @@
         </button>
 
         <div id="nav-menu" class="azul-right">
-          <a href="/azul" class="azul-nav-link">Home</a>
-          <a href="/azul/sobre" class="azul-nav-link">Sobre</a>
-          <a href="/azul/portfolio" class="azul-nav-link">Portifolio</a>
-          <a href="/azul/contato" class="azul-nav-link">Contato</a>
+          <a href="/azul#home" class="azul-nav-link">Home</a>
+          <a href="/azul#sobre" class="azul-nav-link">Sobre</a>
+          <a href="/azul#myStacks" class="azul-nav-link">MyStacks</a>
+          <a href="/azul#contato" class="azul-nav-link">Contato</a>
           <a href="/" class="azul-nav-link azul-inicial">Inicio</a>
         </div>
       </div>
